--- a/02-Grid/1-display/css/style.css
+++ b/02-Grid/1-display/css/style.css
@@ -13,10 +13,12 @@
 .bg-cyan { background-color: cyan}
 
 .container {
+  padding: 10px;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
 }
 
 .container2 {
+  padding: 10px;
   display: grid;
 }
