--- a/02-Grid/3-row/css/style.css
+++ b/02-Grid/3-row/css/style.css
@@ -18,18 +18,21 @@ body {
 }
 
 .container{
+  padding: 10px;
   display: grid;
   grid-template-columns: 2fr 8fr 2fr;
   grid-template-rows: 10vh;
 }
 
 .container2{
+  padding: 10px;
   display: grid;
   grid-template-columns: 20% 10% 60% 10%;
   grid-template-rows: 60px 20vh;
 }
 
 .container-repeat{
+  padding: 10px;
   display: grid;
   grid-template-columns: repeat(4, 25%);
   grid-template-rows: 60px 20vh 30vh;
