--- a/02-Grid/4-area/css/style.css
+++ b/02-Grid/4-area/css/style.css
@@ -17,26 +17,14 @@ body {
   padding: 0;
 }
 
-.container{
-  display: grid;
-  grid-template-columns: 2fr 8fr 2fr;
-  grid-template-rows: 10vh;
-}
-
-.container2{
-  display: grid;
-  grid-template-columns: 20% 10% 60% 10%;
-  grid-template-rows: 60px 20vh;
-}
-
-.container-repeat{
-  display: grid;
-  grid-template-columns: repeat(4, 25%);
-  grid-template-rows: 60px 20vh 30vh;
-}
-
 /* Area */
-
+/* 
+  Ici nous définissons le nom du template css 
+    - Notre classe 'item-a'
+    - Ce voit atribuer le template grid-area: header
+    - Pour etre utilisé dans la classe 'cont-area'
+    - ...
+*/
 .item-a{
   grid-area: header;
 }
