--- a/04-Sass/7-boucle/sass/boucle.sass
+++ b/04-Sass/7-boucle/sass/boucle.sass
@@ -10,4 +10,5 @@
 $list: dog cat bird dolphin
 @each $i in $list
   .image-#{$i}
-    background-image: url(‘images/#{$i}.png’)
+    height: 500px
+    background-image: url("../images/#{$i}.png")
