--- a/04-Sass/1-variable/sass/style.css
+++ b/04-Sass/1-variable/sass/style.css
@@ -1,9 +1,11 @@
 h1 {
   color: #1926d6;
-  font: Helvetica, sans-serif; }
+  font: Helvetica, sans-serif;
+}
 
 h2 {
   color: #28c201;
-  font: Helvetica, sans-serif; }
+  font: Helvetica, sans-serif;
+}
 
 /*# sourceMappingURL=style.css.map */
