--- a/04-Sass/7-boucle/sass/style.sass
+++ b/04-Sass/7-boucle/sass/style.sass
@@ -3,7 +3,6 @@
 @import "nesting.sass"
 @import "fonction.sass"
 @import "boucle.sass"
-@import "remification.sass"
 
 @mixin big-blue-text
   font-family: Arial
@@ -35,4 +34,5 @@ h2
   @extend .home-button
 
 .dog
-  background-image: url("/images/dog.png")
+  height: 500px
+  background-image: url("../images/dog.png")
