--- a/04-Sass/8-ramification/sass/boucle.sass
+++ b/04-Sass/8-ramification/sass/boucle.sass
@@ -7,7 +7,8 @@
   .height-#{$i}
     height: 25em * $i
 
-// $list: dog cat bird dolphin
-// @each $i in $list
-//   .image-#{$i}
-//     background-image: url(‘/images/#{$i}.png’)
+$list: dog cat bird dolphin
+@each $i in $list
+  .image-#{$i}
+    height: 500px
+    background-image: url("../images/#{$i}.png")
