--- a/04-Sass/8-ramification/sass/style.sass
+++ b/04-Sass/8-ramification/sass/style.sass
@@ -3,6 +3,7 @@
 @import "nesting.sass"
 @import "fonction.sass"
 @import "boucle.sass"
+@import "remification.sass"
 
 @mixin big-blue-text
   font-family: Arial
@@ -34,4 +35,5 @@ h2
   @extend .home-button
 
 .dog
-  background-image: url("/images/dog.png")
+  height: 500px
+  background-image: url("../images/dog.png")
