--- a/03-Flex/3-flex-wrap/assets/css/style.css
+++ b/03-Flex/3-flex-wrap/assets/css/style.css
@@ -71,25 +71,25 @@ li {list-style: none;}
 
 /* Item */
 .item-1 {
-    width: 20%;
+    width: 200px;
     height: 100px;
     margin: 5px;
     padding: 5px;
 }
 .item-2 {
-    width: 20%;
+    width: 200px;
     height: 100px;
     margin: 5px;
     padding: 5px;
 }
 .item-3 {
-    width: 20%;
+    width: 200px;
     height:100px;
     margin: 5px;
     padding: 5px;
 }
 .item-4 {
-    width: 20%;
+    width: 200px;
     height: 100px;
     margin: 5px;
     padding: 5px;
